3rdparty/jasper-version-4.2.0/data/test/good/120-master2.mif
MIF

# Tile.
# Commentser: M, I, F, linefeed.

 end of line.
# The fle must be in order: M, I, F, linefeed.

component tlx=0 tly=0 sampperx=4 samppery=2 width=32 height=64 prec=8 sgnd=0 data.gm
component tlx=0 tly=0 sampperx=2 samppery=4 width=64 height=32 prec=8 sgnd=1 data=goldenears.p# This is the end of the header.
end
