3rdparty/jasper-version-4.2.0/data/test/bad/jasper-abort-new.mif
MIF
component tlx sampperx=4 samppery=2 width=4 height=2 prec=8 sgnd
end
P00
0
